Updated entire page to get rid of side scroll and border. Fixed minor details for some words for dark mode.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,11 @@
     /*hide scrollbar for Chrome, Safari, Opera*/
     display: none;
 }
-
+body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 main
 {
     background-color: white;
@@ -66,7 +70,6 @@ h1{
     border-bottom: 1px solid black;
 }
 
-
 #map {
     grid-area: 2 / 1 / 3 / 4;
     background-color: white; 
@@ -103,6 +106,9 @@ h1{
     color:white;
 }
 .dark-mode h1{
+    color:white;
+}
+.dark-mode h2{
     color:white;
 }
 .dark-mode #pref {
